# multipass-gui

./: .travis.yml  README.md  main.c  meson.build  mp-client.c  mp-client.h  mp-instance-row.c  mp-instance-row.h  mp-instance-row.ui  mp-instance.c  mp-instance.h  mp-launch-dialog.c  mp-launch-dialog.h  mp-launch-dialog.ui  mp-resources.gresource.xml  mp-window.c  mp-window.h  mp-window.ui  multipass-gui.desktop.in  snap-store.key.enc
po/: meson.build
snap/: snapcraft.yaml
src/: main.c  meson.build  mp-application.c  mp-application.h  mp-client.c  mp-client.h  mp-configured-instance-row.c  mp-configured-instance-row.h  mp-configured-instance-row.ui  mp-details-dialog.c  mp-details-dialog.h  mp-details-dialog.ui  mp-instance-row.c  mp-instance-row.h  mp-instance-row.ui  mp-instance.c  mp-launch-dialog.c  mp-launch-dialog.ui  mp-resources.gresource.xml  mp-running-instance-row.c  mp-running-instance-row.h  mp-running-instance-row.ui  mp-window.c  mp-window.ui
